--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,19 +1,2 @@
-plugins {
-    id 'java'
-}
-
 group 'net.stonegomes.trial.core'
-version '1.0'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-test {
-    useJUnitPlatform()
-}
+version '1.0-SNAPSHOT'
