--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -20,5 +20,6 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
 
+    implementation project(":core")
     implementation 'com.github.SaiintBrisson.command-framework:bukkit:1.3.0'
 }
