--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
 
     implementation project(":core")
+    implementation 'com.github.simplix-softworks:simplixstorage:3.2.5'
     implementation 'com.github.DevNatan:inventory-framework:2.5.3'
     implementation 'com.github.SaiintBrisson.command-framework:bukkit:1.3.0'
 }
